css: fix scrollbar content jump

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,9 @@
   body {
     @apply text-gray-900 bg-gray-50;
     @apply dark:text-gray-100 dark:bg-gray-800;
+    /* Fix scrollbar content jump: https://stackoverflow.com/a/42987298. */
+    width: 100vw;
+    overflow-x: hidden;
     main {
       @apply mx-auto flex-col max-w-3xl mt-7 px-1;
       p a {
